<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">parkUF</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="app_home_message">Welcome to parkUF! \nPlease click on the top left icon to view  parking lots.</string>
    <string name="number1">Parking Number:</string>
    <string name="name1">Parking Name:</string>
    <string name="decal1">Decal Required:</string>
    <string name="spots1">Spots Open:</string>
    <string name="spots2">Spots Total:</string>
    <string name="begin1">Begin Enforcement:</string>
    <string name="end1">Close Enforcement:</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Flavet Parking</item>
        <item >Reitz Union Parking</item>
        <item >Shands Parking</item>
        <item >Cancer Center Parking</item>
        <item >Fifield Hall Parking</item>
        <item >Criser Hall Parking</item>
        <item >Murphree Parking</item>
        <item >Gator Parking</item>       
        <item >College Map</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/shands</item>
        <item>@drawable/cancer</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/gators</item>
        <item>@drawable/uf2</item>
       
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
